...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/createTeamLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/createTeamBtn"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/btn_rounded"
                    android:text="CREATE TEAM"
                    android:textColor="@color/colorText" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/invitationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView"
...
                    android:layout_marginTop="60dp"
                    android:text="Invitee Name: "
                    android:textColor="@color/colorText"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/inviteeName"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="#ffffff"
                    android:ems="10"
...
                    android:layout_marginTop="20dp"
                    android:text="Invitee Email: "
                    android:textColor="@color/colorText"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/inviteeEmail"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="#ffffff"
                    android:ems="10"
...
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColorHint="#727272"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/btn_rounded"
                    android:text="ADD TEAMATE"
                    android:textColor="@color/colorText" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
...
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <!-- Main content -->

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
...
