...
            android:fontFamily="@font/lato"
            android:text="Walk Name:"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/walkName"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/route_name"
            android:inputType="text"
            android:background="@color/white"
...
            android:text="@string/showTimeLabel"
            android:layout_marginEnd="120sp"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/hour"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/double_zero"
            android:importantForAutofill="no"
...
            android:text="@string/colonStr"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/minute"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/double_zero"
            android:importantForAutofill="no"
...
            android:text="@string/showDateLabel"
            android:layout_marginEnd="15sp"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/month"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/monthEntry"
            android:importantForAutofill="no"
...
            android:text="@string/slashStr"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/day"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/dayEntry"
            android:importantForAutofill="no"
...
            android:text="@string/slashStr"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/year"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="YYYY"
            android:importantForAutofill="no"
...
