...
                            android:text="@string/teamStr"
                            android:textAlignment="center"
                            android:textColor="@color/colorText"
                            android:textSize="45sp" />

                        <Button
                            android:id="@+id/addBtn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:background="@color/colorBackground"
                            android:text="@string/plus"
                            android:textColor="@color/colorText"
                            android:textSize="50sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/proposedWalkLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:layout_marginLeft="20sp"
                        android:layout_marginRight="20sp"
                        style="?android:attr/buttonBarStyle"
...
                            android:layout_marginTop="25sp"
                            android:text="@string/declineBadRoute"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/scheduleWalkBtn"
                            android:layout_width="250sp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/btn_rounded"
                            android:drawablePadding="5dp"
                            android:paddingLeft="40dp"
                            android:paddingRight="40dp"
                            android:layout_marginTop="25sp"
                            android:text="Schedule Walk"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/withdrawWalkBtn"
                            android:layout_width="250sp"
...
